# omnideck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  M0-RUNBOOK.md  README.md  m0-spike.sh  package.json
.github/workflows/: ci.yml  packaging.yml
packaging/: .SRCINFO  M2-RESULTS.md  M2-SESSION-TEST.md  PKGBUILD  install-session.sh  omnideck.install
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  asset.rs  capability.rs  cli.rs  commands.rs  config.rs  gamepad.rs  gpu.rs  hotkey.rs  http.rs  icons.rs  lib.rs  library.rs  logging.rs  main.rs  mpris.rs  steamgriddb.rs  switcher.rs  watchdog.rs
src/lib/: Modal.svelte  NowPlaying.svelte  Wizard.svelte  backend.ts  dialog.ts  sfx.ts
src/lib/bindings/: App.ts  Capability.ts  Config.ts  Game.ts  GamepadEvent.ts  Gpu.ts  Library.ts  LibrarySummary.ts  MediaInfo.ts  Settings.ts  Tier.ts
src/routes/: +page.svelte  _layout-rail.svelte.bak
