[package]
name = "omnideck"
version = "0.1.0"
description = "A 10-foot, controller-first media & game launcher for Linux."
authors = ["OmniDeck contributors"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnideck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# M0 spike: read controllers via evdev to test the real input path inside gamescope
gilrs = "0.11"
# M4: parse Steam VDF/ACF (libraryfolders.vdf, appmanifest_*.acf)
keyvalues-serde = "0.2"
# M4 UI: serve local art to the webview as data URLs
base64 = "0.22"
# config: hand-editable ~/.config/omnideck/config.toml
toml = "0.8"
# SteamGridDB: fetch missing box art over HTTPS
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# headless CLI surface (omnideck probe|scan|gridart|catalog|config + --version/--help)
clap = { version = "4", features = ["derive"] }
# event-driven MPRIS Now Playing (replaces the 4 s `playerctl` fork+exec poll)
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
ts-rs = "12.0.1"

